--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,5 +223,6 @@ workflows:
           filters:
             branches:
               only:
+                - master
                 - main
                 - release/*
