--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "resolutions": {
+    "cheerio": "0.22.0"
+  },
   "dependencies": {
     "@babel/cli": "^7.21.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.0",
@@ -77,15 +80,16 @@
     "@storybook/addon-docs": "^8.3.6",
     "@storybook/react": "^8.3.6",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.7.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-syntax-async-functions": "^6.13.0",
-    "cheerio": "^1.0.0",
+    "cheerio": "^0.22.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.8",
+    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "eslint": "^9.13.0",
     "eslint-config-airbnb": "^19.0.4",
