--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "license-checker": "^25.0.1",
     "lorem-ipsum": "^2.0.4",
     "postcss-loader": "^7.3.4",
     "prettier": "^3.0.0",
