--- a/package.json
+++ b/package.json
@@ -42,8 +42,14 @@
     "access": "public"
   },
   "resolutions": {
-    "cheerio": "0.22.0",
-    "babel-plugin-lodash/@babel/types": "~7.20.0"
+    "cheerio": "1.0.0-rc.3",
+    "babel-plugin-lodash/@babel/types": "~7.20.0",
+    "eslint": "8.50.0",
+    "@storybook/react": "6.5.9",
+    "@storybook/addon-actions": "6.5.12",
+    "@storybook/addon-docs": "6.5.12",
+    "esbuild": "0.14.x",
+    "sass-loader": "12.6.0"
   },
   "dependencies": {
     "@babel/cli": "^7.21.0",
@@ -80,15 +86,15 @@
     "@babel/eslint-parser": "^7.25.8",
     "@babel/preset-env": "^7.25.8",
     "@babel/preset-react": "^7.25.7",
-    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-actions": "6.5.12",
     "@storybook/addon-console": "^1.2.3",
-    "@storybook/addon-docs": "^8.3.6",
-    "@storybook/react": "^8.3.6",
+    "@storybook/addon-docs": "6.5.12",
+    "@storybook/react": "6.5.9",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-syntax-async-functions": "^6.13.0",
-    "cheerio": "^0.22.0",
+    "cheerio": "1.0.0-rc.3",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
@@ -96,7 +102,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
-    "eslint": "^9.13.0",
+    "eslint": "8.50.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.10.0",
@@ -118,7 +124,7 @@
     "postcss-loader": "^7.3.4",
     "prettier": "^3.0.0",
     "sass": "^1.80.3",
-    "sass-loader": "^16.0.2",
+    "sass-loader": "12.6.0",
     "sass-migrator": "^2.2.0",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.6",
