--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "licenses-html": "license-checker --json > license-audit-report.json && license-checker --html > license-audit-report.html"
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=16"
   },
   "publishConfig": {
     "access": "public"
